ros2_ws/log/build_2024-12-23_10-20-58/arm_visualization/stderr.log
  File "/home/ubuntu22/so_arm100_write/ros2_ws/install/arm_visualization/lib/python3.10/site-packages/arm_visualization/motion_controller.py", line 2
    source install/setup.bash
           ^^^^^^^
SyntaxError: invalid syntax

